# DobyteTask

./: .clang-format  CMakeLists.txt  README.md  Solution.cpp  Solution.h  SolutionTests.cpp  conanfile.py  main.cpp  task.md
